Fixing div spacing issue

--- a/jsonindent.css
+++ b/jsonindent.css
@@ -9,12 +9,12 @@
 }
 
 .jsoneditor-manual {
-    height: 92%;
+    height: 93%;
 }
 
 
 .navbar-manual {
-    height: 8%;
+    height: 7%;
 }
 
 .editor-navbar-manual {
@@ -25,3 +25,4 @@
 .editor-manual {
     height: 95%;
 }
+
